// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDetail/CardDetailProperties cancel btn in TypeorNameChange dialog should do nothing 1`] = `
<div>
  <div
    class="octo-propertylist CardDetailProperties"
  >
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Owner
            </span>
          </button>
        </div>
      </div>
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label propColorDefault "
        >
          <span
            class="Label-text"
          >
            Jean-Luc Picard
          </span>
        </span>
      </div>
    </div>
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              MockStatus
            </span>
          </button>
        </div>
      </div>
      <input
        class="Editable octo-propertyvalue"
        placeholder="Empty"
        spellcheck="false"
        style="width: 5px;"
        title=""
        value=""
      />
    </div>
    <div
      class="octo-propertyname add-property"
    >
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add a property
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/CardDetailProperties cancel on delete dialog should do nothing 1`] = `
<div>
  <div
    class="octo-propertylist CardDetailProperties"
  >
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Owner
            </span>
          </button>
        </div>
      </div>
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label propColorDefault "
        >
          <span
            class="Label-text"
          >
            Jean-Luc Picard
          </span>
        </span>
      </div>
    </div>
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              MockStatus
            </span>
          </button>
        </div>
      </div>
      <input
        class="Editable octo-propertyvalue"
        placeholder="Empty"
        spellcheck="false"
        style="width: 5px;"
        title=""
        value=""
      />
    </div>
    <div
      class="octo-propertyname add-property"
    >
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add a property
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/CardDetailProperties should match snapshot 1`] = `
<div>
  <div
    class="octo-propertylist CardDetailProperties"
  >
    <div
      class="octo-propertyrow"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="octo-propertyname"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Owner
            </span>
          </button>
        </div>
      </div>
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label propColorDefault "
        >
          <span
            class="Label-text"
          >
            Jean-Luc Picard
          </span>
        </span>
      </div>
    </div>
    <div
      class="octo-propertyname add-property"
    >
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add a property
        </span>
      </button>
    </div>
  </div>
</div>
`;
